# venvstarter

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  find  format  lint  pylama.ini  pyproject.toml  setup.py  test.sh  tox.ini  venvstarter.py
.github/workflows/: linux_ci.yml  mac_ci.yml  release.yml  windows_ci.yml
_venvstarter/: __init__.py  errors.py  helpers.py  python_handler.py  questions.py  starter.py
docs/: _docs  api.rst  changelog.rst  conf.py  features.rst  index.rst  requirements.txt
docs/new/: changelog.rst  index.rst
docs/sphinx/: conf.py
tests/: conftest.py  test_creation.py  test_finding_python.py  test_ignite.py  test_program.py  test_usage.py  test_version.py
tools/: bootstrap_venvstarter.py  devtools.py  pylama  requirements.dev.txt  venv
