[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venvstarter"
dynamic = ["version"]
description = "Tool to create virtualenvs, manage versions of packages in it and use it start a particular program"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.6"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.2",
    "pytest-helpers-namespace==2021.12.29",
    "pytest-parallel==0.1.1",
    "pytest>=7.2.0",
    "rainbow_logging_handler==2.2.2",
]

[project.urls]
Homepage = "https://github.com/delfick/venvstarter"

[tool.hatch.version]
path = "venvstarter.py"

[tool.hatch.build.targets.sdist]
include = [
    "/venvstarter",
]

[tool.black]
line-length = 100
include = '(\.py|^venv)$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
   | docs/_build
   | build
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.python/*",
   "tools/deps/*",
   "docs/_build/*",
   "build/*",
]

[tool.mypy]
plugins = 'noseOfYeti.plugins.mypy'
ignore_missing_imports = true
show_column_numbers = true
allow_redefinition = true
exclude = ["tools/deps", "tests"]
